Fix: Removed invite twice and popup text alignment

--- a/src/components/main/main.scss
+++ b/src/components/main/main.scss
@@ -1114,9 +1114,10 @@ button.btn.btn-secondary {
         .modal-title {
           font-weight: 600;
           font-size: 18px;
-          line-height: 18px;
-          text-align: center;
+          line-height: 22px;
+          text-align: left;
           color: #333333;
+          padding-right: 2rem;
         }
         button {
           padding: 0;
