--- a/src/components/main/sidebar.scss
+++ b/src/components/main/sidebar.scss
@@ -212,7 +212,6 @@ body .sidebar {
       padding: 0.45rem 1rem 0;
       .profile-details {
         border-bottom: 1px solid #e6dbd4;
-        margin-bottom: 1rem;
         padding: 0.5rem 0 0.25rem;
       }
       .profile-listing-container .dropdown-item {
